# axiom

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.cursor/skills/axiom-architect/: ADR_TEMPLATE.md  SKILL.md
.cursor/skills/axiom-core-dev/: SKILL.md
.cursor/skills/axiom-diag-dev/: SKILL.md
.cursor/skills/axiom-eval-dev/: SKILL.md
.cursor/skills/axiom-geo-dev/: SKILL.md
.cursor/skills/axiom-heal-dev/: SKILL.md
.cursor/skills/axiom-io-dev/: SKILL.md
.cursor/skills/axiom-math-dev/: SKILL.md
.cursor/skills/axiom-ops-dev/: SKILL.md
.cursor/skills/axiom-plugin-sdk-dev/: SKILL.md
.cursor/skills/axiom-rep-dev/: SKILL.md
.cursor/skills/axiom-topo-dev/: SKILL.md
cmake/: AxiomKernelLibraries.cmake
docs/: README.md
docs/api/: AxiomKernel_REST与远程调用样例集.md  AxiomKernel_接口调用样例集.md  AxiomKernel_插件开发样例集.md  AxiomKernel_详细模块接口清单.md
docs/architecture/: AxiomKernel_几何引擎技术架构文档.md  AxiomKernel_模块依赖图与时序图.md  AxiomKernel_项目结构与文档治理建议.md
docs/diagnostics/: AxiomKernel_用户可读错误文案映射表.md  AxiomKernel_错误码与诊断码字典.md
docs/plan/: AxiomKernel_MVP实施蓝图.md  AxiomKernel_STEP_IGES_标准交换实施路线.md  AxiomKernel_主开发计划与阶段路线图.md  AxiomKernel_几何引擎功能需求文档.md  AxiomKernel_变更纪要.md  AxiomKernel_当前开发进度.md  AxiomKernel_术语表与命名约定.md  AxiomKernel_近期迭代与Backlog.md
docs/quality/: AxiomKernel_IO_导出策略矩阵.md  AxiomKernel_基准数据集与性能管理规范.md  AxiomKernel_测试与验收方案.md
docs/templates/: AxiomKernel_代码评审清单模板.md  AxiomKernel_发布说明模板.md  AxiomKernel_合并请求模板.md  AxiomKernel_缺陷分类与处理流程.md
examples/: basic_workflow.cpp  minimal_plugin.cpp
include/axiom/: core.h  diag.h  eval.h  geo.h  heal.h  io.h  math.h  ops.h  plugin.h  rep.h  sdk.h  topo.h
include/axiom/core/: result.h  types.h
include/axiom/diag/: diagnostic_service.h  error_codes.h
include/axiom/eval/: eval_services.h
include/axiom/geo/: geometry_services.h
include/axiom/heal/: heal_services.h
include/axiom/internal/core/: diagnostic_helpers.h  eval_graph_invalidation.h  kernel_state.h  topology_materialization.h
include/axiom/internal/diag/: diagnostic_internal_utils.h
include/axiom/internal/eval/: eval_internal_utils.h
include/axiom/internal/geo/: geo_rep_tessellation_link.h
include/axiom/internal/math/: math_internal_utils.h
include/axiom/internal/rep/: representation_internal_utils.h
include/axiom/io/: io_service.h
include/axiom/math/: math_services.h
include/axiom/ops/: ops_services.h
include/axiom/plugin/: plugin_registry.h  plugin_sdk_version.h
include/axiom/rep/: representation_conversion_service.h
include/axiom/sdk/: kernel.h
include/axiom/topo/: topology_service.h
src/axiom/diag/: diagnostic_service.cpp
src/axiom/eval/: eval_internal_utils.cpp  eval_services.cpp
src/axiom/geo/: geometry_detail_bezier.cpp  geometry_services.cpp
src/axiom/heal/: heal_services.cpp  mesh_self_intersection.cpp
src/axiom/internal/core/: diagnostic_helpers.h  eval_graph_invalidation.h  kernel_state.h  topology_materialization.h
src/axiom/internal/diag/: diagnostic_internal_utils.h
src/axiom/internal/eval/: eval_internal_utils.h
src/axiom/internal/geo/: geo_service_internal.h  geo_service_internal_part1.inc  geo_service_internal_part2.inc  geometry_detail_bezier.h  geometry_services_curve.inc  geometry_services_factories.inc  geometry_services_surface_closest.inc  geometry_services_surface_domain_bbox.inc  geometry_services_surface_eval.inc  geometry_services_transform_intersect.inc
src/axiom/internal/heal/: heal_helpers_a.inc  heal_helpers_b.inc  heal_repair.inc  heal_validation.inc  mesh_self_intersection.h
src/axiom/internal/io/: io_service_internal.h  io_service_part1.inc  io_service_part2.inc  io_service_part3.inc  step_iges_standard_scan.cpp  step_iges_standard_scan.h
src/axiom/internal/math/: math_internal_utils.h
src/axiom/internal/ops/: ops_internal_a.inc  ops_internal_b.inc  ops_internal_c.inc  ops_service_internal.h
src/axiom/internal/rep/: representation_internal_utils.h
src/axiom/internal/sdk/: kernel_plugin_helpers.cpp  kernel_plugin_helpers.h
src/axiom/internal/topo/: topo_service_internal.h  topology_query.inc  topology_transaction.inc  topology_validation_a.inc  topology_validation_b.inc  topology_validation_c.inc
src/axiom/io/: io_service.cpp  io_service_internal.cpp
src/axiom/math/: math_internal_utils.cpp  math_services.cpp
src/axiom/ops/: ops_service_internal.cpp  ops_services.cpp
src/axiom/plugin/: plugin_registry.cpp
src/axiom/rep/: representation_conversion_service.cpp  representation_internal_utils.cpp
src/axiom/sdk/: kernel.cpp  kernel_plugin.cpp
src/axiom/topo/: topo_service_internal.cpp  topology_service.cpp
src/diag/: diagnostic_internal_utils.cpp  diagnostic_service.cpp
src/geo/: geometry_services.cpp
src/heal/: heal_services.cpp
src/io/: io_service.cpp
src/math/: math_internal_utils.cpp  math_services.cpp
src/ops/: ops_services.cpp
src/plugin/: plugin_registry.cpp
src/rep/: representation_conversion_service.cpp  representation_internal_utils.cpp
src/sdk/: kernel.cpp
src/topo/: topology_service.cpp
tests/: boolean_prep_test.cpp  boolean_workflow_test.cpp  geometry_test.cpp  io_workflow_test.cpp  math_services_test.cpp  ops_heal_test.cpp  perf_baseline_test.cpp  representation_io_test.cpp  topology_test.cpp
tests/data/io/: README.md  minimal_step_subset.step  standard_iges_deck_stub.iges  standard_step_express_stub.step
tests/diag/: diagnostics_test.cpp
tests/eval/: query_eval_test.cpp
tests/geo/: geometry_test.cpp
tests/heal/: heal_test.cpp
tests/io/: io_dataset_test.cpp  io_workflow_test.cpp
tests/math/: math_services_test.cpp
tests/ops/: boolean_prep_test.cpp  boolean_workflow_test.cpp  ops_heal_test.cpp
tests/rep/: representation_io_test.cpp
tests/sdk/: kernel_runtime_invariant_test.cpp  plugin_sdk_test.cpp  smoke_test.cpp
tests/topo/: topology_test.cpp
